// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default queue behavior 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"root_Queue_7193B145\\": {}
    }
  }
}"
`;

exports[`queue with a consumer function 1`] = `
"const $cap = {};
async function $proc($cap, event) {
          console.log(\\"Received \\" + event.name);
        }
async function $sqsEventWrapper($cap, event) {
  for (const record of event.Records ?? []) {
    await $proc($cap, record.body);
  }
}
exports.handler = async function(event) {
  return await $sqsEventWrapper($cap, event);
};"
`;

exports[`queue with a consumer function 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_QueueOnMessagecbf6dee05a035c28_IamRole_131CB11E\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_QueueOnMessagecbf6dee05a035c28_IamRolePolicy_113E5CE8\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:ReceiveMessage\\\\\\",\\\\\\"sqs:ChangeMessageVisibility\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\",\\\\\\"sqs:DeleteMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.root_Queue_7193B145.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_QueueOnMessagecbf6dee05a035c28_IamRole_131CB11E.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_QueueOnMessagecbf6dee05a035c28_IamRolePolicyAttachment_0594DFB1\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_QueueOnMessagecbf6dee05a035c28_IamRole_131CB11E.name}\\"
      }
    },
    \\"aws_lambda_event_source_mapping\\": {
      \\"root_Queue_EventSourceMapping_A20C741D\\": {
        \\"batch_size\\": 1,
        \\"event_source_arn\\": \\"\${aws_sqs_queue.root_Queue_7193B145.arn}\\",
        \\"function_name\\": \\"\${aws_lambda_function.root_QueueOnMessagecbf6dee05a035c28_DB212311.function_name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_QueueOnMessagecbf6dee05a035c28_DB212311\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Queue-OnMessage-cbf6dee05a035c28\\"
          }
        },
        \\"function_name\\": \\"Queue-OnMessage-cbf6dee05a035c28\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_QueueOnMessagecbf6dee05a035c28_IamRole_131CB11E.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_QueueOnMessagecbf6dee05a035c28_Bucket_A66E23DF.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_QueueOnMessagecbf6dee05a035c28_S3Object_B088705D.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_QueueOnMessagecbf6dee05a035c28_Bucket_A66E23DF\\": {}
    },
    \\"aws_s3_object\\": {
      \\"root_QueueOnMessagecbf6dee05a035c28_S3Object_B088705D\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_QueueOnMessagecbf6dee05a035c28_Bucket_A66E23DF.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_sqs_queue\\": {
      \\"root_Queue_7193B145\\": {
        \\"visibility_timeout_seconds\\": 30
      }
    }
  }
}"
`;

exports[`queue with custom timeout 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"root_Queue_7193B145\\": {
        \\"visibility_timeout_seconds\\": 30
      }
    }
  }
}"
`;
